--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -4,7 +4,7 @@
 
 .logo-link {
   svg {
-    color: #ff385c;
-    // color: $airbnbLogo; sassc error not recognizing the variable, temp fix above
+    // color: #ff385c;
+    color: $airbnbLogo; 
   }
 }
