--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,24 +34,30 @@
                   </svg>
               </button>
           </div>
-          <div class="flex justify-around">
-            <div class='flex items-center font-medium'>Airbnb your home</div>
-            <div class='p-3'>
+          <div class="flex justify-around ">
+            <div class='flex items-center font-medium hover:bg-slate-300 rounded-full p-3'>Airbnb your home</div>
+             <!--Globe icon-->
+            <div class='p-3 hover:bg-gray-200 rounded-full content-end'>
               <button>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"></path></svg>
               </button>
             </div>
-            <div class="border-2 hover:bg-gray-200 rounded-full p-2 " data-header-target="openUserMenu">
-              <button class='flex flex-row items-center'>
-
-                <svg class='' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;" ><g fill="none"><path d="M2 16h28M2 24h28M2 8h28"></path></g></svg>
-                
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 2rem; width: 100%; fill: bg-gray-200;"><path d="M16 .7C7.56.7.7 7.56.7 16S7.56 31.3 16 31.3 31.3 24.44 31.3 16 24.44.7 16 .7zm0 28c-4.02 0-7.6-1.88-9.93-4.81a12.43 12.43 0 0 1 6.45-4.4A6.5 6.5 0 0 1 9.5 14a6.5 6.5 0 0 1 13 0 6.51 6.51 0 0 1-3.02 5.5 12.42 12.42 0 0 1 6.45 4.4A12.67 12.67 0 0 1 16 28.7z"></path></svg>
+             <!--Profile Button-->
+            <div class="border-2 hover:bg-gray-200 rounded-full p-2" data-header-target="openUserMenu">
+              <button class='flex flex-row items-center '>
+                <!--Hamburger icon  -->
+                <div class='p-2'>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;" ><g fill="none"><path d="M2 16h28M2 24h28M2 8h28"></path></g></svg>
+                </div>
+                <!--profile picture icon  -->
+                <div>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 2rem; width: 100%; fill: bg-gray-200;"><path d="M16 .7C7.56.7.7 7.56.7 16S7.56 31.3 16 31.3 31.3 24.44 31.3 16 24.44.7 16 .7zm0 28c-4.02 0-7.6-1.88-9.93-4.81a12.43 12.43 0 0 1 6.45-4.4A6.5 6.5 0 0 1 9.5 14a6.5 6.5 0 0 1 13 0 6.51 6.51 0 0 1-3.02 5.5 12.42 12.42 0 0 1 6.45 4.4A12.67 12.67 0 0 1 16 28.7z"></path></svg>
+                </div>
               </button>
             </div>
             <!--Profile Dropdown  -->
               <div
-                class="hidden flex-col-reverse"
+                class="fixed"
                 id="menu-dropdown-items"
                 role="menu"
                 aria-orientation="vertical"
@@ -63,13 +69,13 @@
                 data-transition-leave-start="transform opacity-100 scale-100"
                 data-transition-leave-end="transform opacity-0 scale-95"
               >
-              <ul class="flex flex-col">
-                <li>Sign up</li>
-                <li>Log in</li>
-                <li>Giftcards</li>
-                <li>Airbnb your home</li>
-                <li>Host an Experience</li>
-                <li>Help Center</li>
+              <ul class='border-2 border-gray-300 rounded-xl p-4'>
+                <li class="hover:bg-slate-300 p-2" >Sign up</li>
+                <li class="hover:bg-slate-300 border-gray-30 border-b-2 p-2">Log in</li>
+                <li class="hover:bg-slate-300 p-2">Giftcards</li>
+                <li class="hover:bg-slate-300 p-2">Airbnb your home</li>
+                <li class="hover:bg-slate-300 p-2">Host an Experience</li>
+                <li class="hover:bg-slate-300 p-2" >Help Center</li>
               </ul>
               </div>
             </div>
