--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,67 +19,72 @@
       </div>
   
       <div class="menu w-full lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
-          <div class="relative mx-auto text-gray-600 lg:block hidden">
-              <input
-                class="border-2 border-gray-300 bg-white h-10 pl-2 pr-8 rounded-lg text-sm focus:outline-none hover:bg-gray-200"
-                type="search" name="search" placeholder="Search">
-              <button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
-                  <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
-                      version="1.1" id="Capa_1" x="0px" y="0px"
-                      viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;"
-                      xml:space="preserve"
-                      width="512px" height="512px">
-                  <path
-                    d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
-                  </svg>
-              </button>
+        <div class="relative mx-auto text-gray-600 lg:block hidden">
+          <input
+            class="border-2 border-gray-300 bg-white h-10 pl-2 pr-8 rounded-lg text-sm focus:outline-none hover:bg-gray-200"
+            type="search" name="search" placeholder="Search"
+          >
+          <button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
+            <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+                version="1.1" id="Capa_1" x="0px" y="0px"
+                viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;"
+                xml:space="preserve"
+                width="512px" height="512px">
+            <path
+              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
+            </svg>
+          </button>
+        </div>
+        <div class="flex justify-around ">
+          <div class='flex items-center font-medium hover:bg-slate-300 rounded-full p-3'>Airbnb your home</div>
+            <!--Globe icon-->
+          <div class='p-3 hover:bg-gray-200 rounded-full content-end'>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"></path></svg>
+            </button>
           </div>
-          <div class="flex justify-around ">
-            <div class='flex items-center font-medium hover:bg-slate-300 rounded-full p-3'>Airbnb your home</div>
-             <!--Globe icon-->
-            <div class='p-3 hover:bg-gray-200 rounded-full content-end'>
-              <button>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;"><path d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z"></path></svg>
-              </button>
-            </div>
-             <!--Profile Button-->
-            <div class="border-2 hover:bg-gray-200 rounded-full p-2" data-header-target="openUserMenu">
-              <button class='flex flex-row items-center '>
-                <!--Hamburger icon  -->
-                <div class='p-2'>
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;" ><g fill="none"><path d="M2 16h28M2 24h28M2 8h28"></path></g></svg>
-                </div>
-                <!--profile picture icon  -->
-                <div>
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 2rem; width: 100%; fill: bg-gray-200;"><path d="M16 .7C7.56.7.7 7.56.7 16S7.56 31.3 16 31.3 31.3 24.44 31.3 16 24.44.7 16 .7zm0 28c-4.02 0-7.6-1.88-9.93-4.81a12.43 12.43 0 0 1 6.45-4.4A6.5 6.5 0 0 1 9.5 14a6.5 6.5 0 0 1 13 0 6.51 6.51 0 0 1-3.02 5.5 12.42 12.42 0 0 1 6.45 4.4A12.67 12.67 0 0 1 16 28.7z"></path></svg>
-                </div>
-              </button>
-            </div>
-            <!--Profile Dropdown  -->
-              <div
-                class="fixed"
-                id="menu-dropdown-items"
-                role="menu"
-                aria-orientation="vertical"
-                aria-labelledby="user-menu-button"
-                data-transition-enter="transition ease-out duration-100"
-                data-transition-enter-start="transform opacity-0 scale-95"
-                data-transition-enter-end="transform opacity-100 scale-100"
-                data-transition-leave="transition ease-in duration-75"
-                data-transition-leave-start="transform opacity-100 scale-100"
-                data-transition-leave-end="transform opacity-0 scale-95"
-              >
-              <ul class='border-2 border-gray-300 rounded-xl p-4'>
-                <li class="hover:bg-slate-300 p-2" >Sign up</li>
-                <li class="hover:bg-slate-300 border-gray-30 border-b-2 p-2">Log in</li>
-                <li class="hover:bg-slate-300 p-2">Giftcards</li>
-                <li class="hover:bg-slate-300 p-2">Airbnb your home</li>
-                <li class="hover:bg-slate-300 p-2">Host an Experience</li>
-                <li class="hover:bg-slate-300 p-2" >Help Center</li>
-              </ul>
+            <!--Profile Button-->
+          <div class="border-2 hover:bg-gray-200 rounded-full p-2" data-header-target="openUserMenu">
+            <button class='flex flex-row items-center '>
+              <!--Hamburger icon  -->
+              <div class='p-2'>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;" ><g fill="none"><path d="M2 16h28M2 24h28M2 8h28"></path></g></svg>
+              </div>
+              <!--profile picture icon  -->
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 2rem; width: 100%; fill: bg-gray-200;"><path d="M16 .7C7.56.7.7 7.56.7 16S7.56 31.3 16 31.3 31.3 24.44 31.3 16 24.44.7 16 .7zm0 28c-4.02 0-7.6-1.88-9.93-4.81a12.43 12.43 0 0 1 6.45-4.4A6.5 6.5 0 0 1 9.5 14a6.5 6.5 0 0 1 13 0 6.51 6.51 0 0 1-3.02 5.5 12.42 12.42 0 0 1 6.45 4.4A12.67 12.67 0 0 1 16 28.7z"></path></svg>
+              </div>
+            </button>
+          </div>
+          <!--Profile Dropdown  -->
+          <div
+            class="hidden fixed top-20 "
+            id="menu-dropdown-items"
+            role="menu"
+            aria-orientation="vertical"
+            aria-labelledby="user-menu-button"
+            data-transition-enter="transition ease-out duration-100"
+            data-transition-enter-start="transform opacity-0 scale-95"
+            data-transition-enter-end="transform opacity-100 scale-100"
+            data-transition-leave="transition ease-in duration-75"
+            data-transition-leave-start="transform opacity-100 scale-100"
+            data-transition-leave-end="transform opacity-0 scale-95"
+          >
+            <div class='border-2 border-gray-300 rounded-xl shadow-xl divide-y divide-gray-200'>
+              <div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Sign up</div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Log in</div>
+              </div>
+              <div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Airbnb your home</div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Host an Experience</div>
+                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Help Center</div>
               </div>
             </div>
+
           </div>
+        </div>
       </div>
   </nav>
 </header>
