Adjust header profile dropdown for better positioning and likeness to bnb.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,15 +71,15 @@
             data-transition-leave-end="transform opacity-0 scale-95"
           >
             <div class='border-2 border-gray-300 rounded-xl shadow-xl divide-y divide-gray-200'>
-              <div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Sign up</div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Log in</div>
+              <div class='flex flex-col'>
+                <a href="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2" data-header-target="signUpLink" >Sign up</a>
+                <a href="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2" data-header-target="loginUpLink">Log in</a>
               </div>
-              <div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Airbnb your home</div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Host an Experience</div>
-                <div class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Help Center</div>
+              <div class='flex flex-col'>
+                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</a>
+                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Airbnb your home</a>
+                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Host an Experience</a>
+                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Help Center</a>
               </div>
             </div>
 
