Add header changes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,8 +72,8 @@
           >
             <div class='border-2 border-gray-300 rounded-xl shadow-xl divide-y divide-gray-200'>
               <div class='flex flex-col'>
-                <a href="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2" data-header-target="signUpLink" >Sign up</a>
-                <a href="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2" data-header-target="loginUpLink">Log in</a>
+                <a data-header-target="userAuthLink" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2">Sign up</a>
+                <a  data-header-target="userAuthLink" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2">Log in</a>
               </div>
               <div class='flex flex-col'>
                 <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</a>
