Add close functionality with x to modal

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -76,10 +76,10 @@
                 <a  data-header-target="userAuthLink" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2">Log in</a>
               </div>
               <div class='flex flex-col'>
-                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</a>
-                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Airbnb your home</a>
-                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Host an Experience</a>
-                <a href ="#" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Help Center</a>
+                <a data-header-target="profileDropdownLinks" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Giftcards</a>
+                <a data-header-target="profileDropdownLinks" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Host an Experience</a>
+                <a data-header-target="profileDropdownLinks" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 ">Airbnb your home</a>
+                <a data-header-target="profileDropdownLinks" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2 " >Help Center</a>
               </div>
             </div>
 
