--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -70,7 +70,7 @@
             data-transition-leave-start="transform opacity-100 scale-100"
             data-transition-leave-end="transform opacity-0 scale-95"
           >
-            <div class='border-1 border-gray-300 rounded-xl shadow-xl divide-y divide-gray-200'>
+            <div class='border border-gray-300 rounded-xl shadow-xl divide-y divide-gray-200'>
               <div class='flex flex-col'>
                 <a data-header-target="userAuthLink" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2">Sign up</a>
                 <a  data-header-target="userAuthLink" class="hover:bg-slate-300 pl-4 pr-20 pt-2 pb-2">Log in</a>
