--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -7,7 +7,7 @@
      >
         <!-- Modal content -->
         <div 
-            class="hidden relative bg-white rounded-lg shadow"
+            class="hidden bg-white rounded-lg"
             data-controller="modal"
             id="authentication-modal"
             tabindex="-1"
